# vibevoice

./: .env.example  .gitignore  README.md  build.py  check_audio_devices.py  cleanup.py  com.vibevoice.agent.plist  install-service.sh  launch.py  launch_menubar.py  manage-service.sh  pyproject.toml  requirements.txt  start.sh  test_keys.py  test_micro.py  test_screenshot.py  test_streaming.py  uninstall-service.sh  vibevoice.spec
.claude/agents/: ORCHESTRATION-RULES.md  README.md
.claude/agents/base/: executor-base.md  planner-base.md
.claude/agents/executors/: README.md
.claude/agents/executors/debugging/: debug-detective.md  debug-fixer.md  sec-auditor.md
.claude/agents/executors/design/: design-brand.md  design-ui.md  design-ux.md  design-visual.md  design-whimsy.md
.claude/agents/orchestration/: orchestrate-manager.md  state-manager.md
.claude/agents/planners/: README.md  plan-architect.md  plan-content.md  plan-feature.md  plan-fix.md  plan-research.md
.claude/agents/test/: task-persistence-test.md
.claude/commands/: README.md  backup.md  check.md  clean.md  coach.md  commit.md  debug.md  deploy.md  dev.md  docs.md  git-ignore.md  git.md  install.md  kiss.md  monitor.md  optimize.md  orchestrate.md  research.md  review.md  run.md  security.md  sync.md  test.md  todo.md
docs/: MACOS_APP.md  POWER_SAVING.md
src/vibevoice/: __main__.py  audio_capture.py  cli.py  config.py  control_state.py  menubar.py  notifications.py  server.py  transcriber.py  vad.py
tests/: __init__.py  conftest.py  test_audio_capture.py  test_transcriber.py
(+35 files in other folders)
