[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vibevoice"
version = "0.1.0"
description = "Voice-to-text using local Whisper model with keyboard input"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    { name = "Marc Päpper" }
]
dependencies = [
    "mlx-whisper>=0.1.0",
    "python-dotenv==1.0.0",
    "sounddevice==0.4.6",
    "numpy>=1.26.0",
    "pynput==1.7.8",
    "scipy==1.16.1",
    "torch>=2.0.0",
    "huggingface-hub>=0.20.0"
]

[project.scripts]
vibevoice = "vibevoice.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/vibevoice"]
